Fixed a typo on the comic page

--- a/sample-2.html
+++ b/sample-2.html
@@ -46,7 +46,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clip_frame grpelem" id="u458"><!-- image -->
        <img class="block" id="u458_img" src="images/comic3.jpg?crc=355932750" alt="" data-heightwidthratio="1.4303797468354431" data-image-width="316" data-image-height="452"/>
       </div>
-      <img class="grpelem" id="u488-4" alt="Here is a short comic I made for a contest. I drew it in ink and colorered it in with Photoshop. " src="images/u488-4.png?crc=405776276" data-image-width="247"/><!-- rasterized frame -->
+      <img class="grpelem" id="u488-4" alt="Here is a short comic I made for a contest. I drew it in ink and colored it in with Photoshop. " src="images/u488-4.png?crc=47811729" data-image-width="247"/><!-- rasterized frame -->
      </div>
     </div>
    </div>
