--- a/comic.html
+++ b/comic.html
@@ -11,14 +11,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "sample-2.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "comic.css"], "outOfDate":[]};
 </script>
   
-  <title>Sample 2</title>
+  <title>comic</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3992867092"/>
-  <link rel="stylesheet" type="text/css" href="css/sample-2.css?crc=4199305157" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4024840798"/>
+  <link rel="stylesheet" type="text/css" href="css/comic.css?crc=4040164797" id="pagesheet"/>
    </head>
  <body>
 
@@ -27,7 +27,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div id="u218"><!-- group -->
      <div class="clearfix" id="u218_align_to_page">
       <img class="grpelem" id="u332-6" alt="Jason Hommas illustrator" src="images/u332-6.png?crc=11387832" data-image-width="446"/><!-- rasterized frame -->
-      <img class="grpelem" id="u397-4" alt="jahommas@gmail.com" src="images/u397-4.png?crc=254750590" data-image-width="462"/><!-- rasterized frame -->
      </div>
     </div>
    </div>
@@ -50,12 +49,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <a class="nonblock nontext grpelem" id="u345" href="sample-1.html"><!-- state-based BG images --><div id="u345_states"><img alt="Caricatures" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
-   <a class="nonblock nontext MuseLinkActive grpelem" id="u348" href="sample-2.html"><!-- state-based BG images --><div id="u348_states"><img alt="Comic" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
-   <a class="nonblock nontext grpelem" id="u351" href="sample-3.html"><!-- state-based BG images --><div id="u351_states"><img alt="Vehicles" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
-   <a class="nonblock nontext grpelem" id="u356" href="sample-4.html"><!-- state-based BG images --><div id="u356_states"><img alt="Digital" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+   <a class="nonblock nontext grpelem" id="u345" href="caricatures.html"><!-- state-based BG images --><div id="u345_states"><img alt="Caricatures" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+   <a class="nonblock nontext MuseLinkActive grpelem" id="u348" href="comic.html"><!-- state-based BG images --><div id="u348_states"><img alt="Comic" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+   <a class="nonblock nontext grpelem" id="u351" href="vehicles.html"><!-- state-based BG images --><div id="u351_states"><img alt="Vehicles" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+   <a class="nonblock nontext grpelem" id="u356" href="digital.html"><!-- state-based BG images --><div id="u356_states"><img alt="Digital" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    <a class="nonblock nontext grpelem" id="u359" href="contact.html"><!-- state-based BG images --><div id="u359_states"><img alt="Contact" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    <a class="nonblock nontext grpelem" id="u362" href="index.html"><!-- state-based BG images --><div id="u362_states"><img alt="Home" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+   <a class="nonblock nontext grpelem" id="u397" href="mailto:jahommas@gmail.com"><!-- state-based BG images --><div id="u397_states"><img alt="jahommas@gmail.com" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    <div class="clip_frame grpelem" id="u324"><!-- svg -->
     <img class="svg svg_mar" id="u322" src="images/pasted-svg-76456x115.svg?crc=3901539588" onload="this.style.height=(this.offsetWidth*141/64.89204545454551)+'px'" alt="" data-mu-svgfallback="images/pasted%20svg%2076456x115_poster_.png?crc=214503417" data-heightwidthratio="2.169230769230769" data-image-width="65" data-image-height="141"/>
    </div>
@@ -68,6 +68,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u356_states-r.png?crc=494354556" alt=""/>
    <img class="preload" src="images/u359_states-r.png?crc=3894433238" alt=""/>
    <img class="preload" src="images/u362_states-r.png?crc=133665639" alt=""/>
+   <img class="preload" src="images/u397_states-r.png?crc=4181643006" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
