--- a/vehicles.html
+++ b/vehicles.html
@@ -11,14 +11,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "sample-4.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "vehicles.css"], "outOfDate":[]};
 </script>
   
-  <title>Sample 4</title>
+  <title>vehicles</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3992867092"/>
-  <link rel="stylesheet" type="text/css" href="css/sample-4.css?crc=4239064621" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4024840798"/>
+  <link rel="stylesheet" type="text/css" href="css/vehicles.css?crc=5357262" id="pagesheet"/>
    </head>
  <body>
 
@@ -27,7 +27,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div id="u218"><!-- group -->
      <div class="clearfix" id="u218_align_to_page">
       <img class="grpelem" id="u332-6" alt="Jason Hommas illustrator" src="images/u332-6.png?crc=11387832" data-image-width="446"/><!-- rasterized frame -->
-      <img class="grpelem" id="u397-4" alt="jahommas@gmail.com" src="images/u397-4.png?crc=254750590" data-image-width="462"/><!-- rasterized frame -->
      </div>
     </div>
    </div>
@@ -37,31 +36,32 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="browser_width grpelem" id="u233-bw">
     <div id="u233"><!-- group -->
      <div class="clearfix" id="u233_align_to_page">
-      <div class="clip_frame grpelem" id="u524"><!-- image -->
-       <img class="block" id="u524_img" src="images/oktober-crop-u524.jpg?crc=56402377" alt="" data-heightwidthratio="0.905940594059406" data-image-width="404" data-image-height="366"/>
-      </div>
-      <div class="clearfix grpelem" id="pu544-5"><!-- column -->
-       <img class="colelem" id="u544-5" alt="All of these were drawn with ink and colored in Photoshop. " src="images/u544-5.png?crc=3899388883" data-image-width="325"/><!-- rasterized frame -->
-       <div class="clip_frame colelem" id="u568"><!-- image -->
-        <img class="block" id="u568_img" src="images/deer-crop-u568.jpg?crc=3961857910" alt="" data-heightwidthratio="1.2189054726368158" data-image-width="201" data-image-height="245"/>
+      <img class="grpelem" id="u521-7" alt="I love drawing different kinds of vehicles. The helicopters were made for the Robinson Helicopter Company. " src="images/u521-7.png?crc=219731347" data-image-width="318"/><!-- rasterized frame -->
+      <div class="clearfix grpelem" id="pu501"><!-- column -->
+       <div class="clip_frame colelem" id="u501"><!-- image -->
+        <img class="block" id="u501_img" src="images/heli1.png?crc=3844090646" alt="" data-heightwidthratio="0.6996336996336996" data-image-width="273" data-image-height="191"/>
+       </div>
+       <div class="clip_frame colelem" id="u491"><!-- image -->
+        <img class="block" id="u491_img" src="images/heli3.png?crc=199256571" alt="" data-heightwidthratio="1.0127118644067796" data-image-width="236" data-image-height="239"/>
        </div>
       </div>
-      <div class="clip_frame grpelem" id="u534"><!-- image -->
-       <img class="block" id="u534_img" src="images/theofficenofilter-crop-u534.jpg?crc=3826726694" alt="" data-heightwidthratio="0.847457627118644" data-image-width="413" data-image-height="350"/>
+      <div class="clip_frame grpelem" id="u511"><!-- image -->
+       <img class="block" id="u511_img" src="images/pic5.jpg?crc=4248574233" alt="" data-heightwidthratio="1" data-image-width="410" data-image-height="410"/>
       </div>
      </div>
     </div>
    </div>
-   <a class="nonblock nontext grpelem" id="u345" href="sample-1.html"><!-- state-based BG images --><div id="u345_states"><img alt="Caricatures" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
-   <a class="nonblock nontext grpelem" id="u348" href="sample-2.html"><!-- state-based BG images --><div id="u348_states"><img alt="Comic" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
-   <a class="nonblock nontext grpelem" id="u351" href="sample-3.html"><!-- state-based BG images --><div id="u351_states"><img alt="Vehicles" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
-   <a class="nonblock nontext MuseLinkActive grpelem" id="u356" href="sample-4.html"><!-- state-based BG images --><div id="u356_states"><img alt="Digital" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+   <a class="nonblock nontext grpelem" id="u345" href="caricatures.html"><!-- state-based BG images --><div id="u345_states"><img alt="Caricatures" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+   <a class="nonblock nontext grpelem" id="u348" href="comic.html"><!-- state-based BG images --><div id="u348_states"><img alt="Comic" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+   <a class="nonblock nontext MuseLinkActive grpelem" id="u351" href="vehicles.html"><!-- state-based BG images --><div id="u351_states"><img alt="Vehicles" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+   <a class="nonblock nontext grpelem" id="u356" href="digital.html"><!-- state-based BG images --><div id="u356_states"><img alt="Digital" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    <a class="nonblock nontext grpelem" id="u359" href="contact.html"><!-- state-based BG images --><div id="u359_states"><img alt="Contact" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    <a class="nonblock nontext grpelem" id="u362" href="index.html"><!-- state-based BG images --><div id="u362_states"><img alt="Home" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+   <a class="nonblock nontext grpelem" id="u397" href="mailto:jahommas@gmail.com"><!-- state-based BG images --><div id="u397_states"><img alt="jahommas@gmail.com" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    <div class="clip_frame grpelem" id="u324"><!-- svg -->
     <img class="svg svg_mar" id="u322" src="images/pasted-svg-76456x115.svg?crc=3901539588" onload="this.style.height=(this.offsetWidth*141/64.89204545454551)+'px'" alt="" data-mu-svgfallback="images/pasted%20svg%2076456x115_poster_.png?crc=214503417" data-heightwidthratio="2.169230769230769" data-image-width="65" data-image-height="141"/>
    </div>
-   <div class="verticalspacer" data-offset-top="607" data-content-above-spacer="766" data-content-below-spacer="161" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="629" data-content-above-spacer="766" data-content-below-spacer="139" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/u345_states-r.png?crc=501020594" alt=""/>
@@ -70,6 +70,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <img class="preload" src="images/u356_states-r.png?crc=494354556" alt=""/>
    <img class="preload" src="images/u359_states-r.png?crc=3894433238" alt=""/>
    <img class="preload" src="images/u362_states-r.png?crc=133665639" alt=""/>
+   <img class="preload" src="images/u397_states-r.png?crc=4181643006" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
