Moved the lower text to random places to see if it'll do anything.

--- a/digital.html
+++ b/digital.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>jasonhommas</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=8871900"/>
-  <link rel="stylesheet" type="text/css" href="css/digital.css?crc=4142148413" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3909434520"/>
+  <link rel="stylesheet" type="text/css" href="css/digital.css?crc=4116462765" id="pagesheet"/>
    </head>
  <body>
 
@@ -39,14 +39,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clip_frame grpelem" id="u524"><!-- image -->
        <img class="block" id="u524_img" src="images/oktober-crop-u524.jpg?crc=56402377" alt="" data-heightwidthratio="0.905940594059406" data-image-width="404" data-image-height="366"/>
       </div>
-      <div class="clearfix grpelem" id="pu544-5"><!-- column -->
-       <img class="colelem" id="u544-5" alt="All of these were drawn with ink and colored in Photoshop. " src="images/u544-5.png?crc=3899388883" data-image-width="325"/><!-- rasterized frame -->
-       <div class="clip_frame colelem" id="u568"><!-- image -->
-        <img class="block" id="u568_img" src="images/deer-crop-u568.jpg?crc=3961857910" alt="" data-heightwidthratio="1.2189054726368158" data-image-width="201" data-image-height="245"/>
-       </div>
-      </div>
-      <div class="clip_frame grpelem" id="u534"><!-- image -->
-       <img class="block" id="u534_img" src="images/theofficenofilter-crop-u534.jpg?crc=3826726694" alt="" data-heightwidthratio="0.847457627118644" data-image-width="413" data-image-height="350"/>
+      <div class="clip_frame grpelem" id="u568"><!-- image -->
+       <img class="block" id="u568_img" src="images/deer-crop-u568.jpg?crc=3961857910" alt="" data-heightwidthratio="1.2189054726368158" data-image-width="201" data-image-height="245"/>
       </div>
      </div>
     </div>
@@ -58,6 +52,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <a class="nonblock nontext grpelem" id="u359" href="contact.html"><!-- state-based BG images --><div id="u359_states"><img alt="Contact" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    <a class="nonblock nontext grpelem" id="u362" href="index.html"><!-- state-based BG images --><div id="u362_states"><img alt="Home" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    <a class="nonblock nontext grpelem" id="u397" href="mailto:jahommas@gmail.com"><!-- state-based BG images --><div id="u397_states"><img alt="jahommas@gmail.com" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+   <div class="clip_frame grpelem" id="u534"><!-- image -->
+    <img class="block" id="u534_img" src="images/theofficenofilter-crop-u534.jpg?crc=3826726694" alt="" data-heightwidthratio="0.847457627118644" data-image-width="413" data-image-height="350"/>
+   </div>
+   <img class="grpelem" id="u544-5" alt="All of these were drawn with ink and colored in Photoshop. " src="images/u544-5.png?crc=3899388883" data-image-width="325"/><!-- rasterized frame -->
    <div class="clip_frame grpelem" id="u324"><!-- svg -->
     <img class="svg svg_mar" id="u322" src="images/pasted-svg-76456x115.svg?crc=3901539588" onload="this.style.height=(this.offsetWidth*141/64.89204545454551)+'px'" alt="" data-mu-svgfallback="images/pasted%20svg%2076456x115_poster_.png?crc=214503417" data-heightwidthratio="2.169230769230769" data-image-width="65" data-image-height="141"/>
    </div>
