--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>jasonhommas</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=8871900"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4112855396" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3909434520"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4181385430" id="pagesheet"/>
    </head>
  <body>
 
@@ -34,13 +34,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div id="u162"><!-- simple frame --></div>
    </div>
    <div class="browser_width grpelem" id="u233-bw">
-    <div id="u233"><!-- group -->
-     <div class="clearfix" id="u233_align_to_page">
-      <div class="clip_frame grpelem" id="u412"><!-- image -->
-       <img class="block" id="u412_img" src="images/pic1.jpg?crc=4211681191" alt="" data-heightwidthratio="1" data-image-width="466" data-image-height="466"/>
-      </div>
-     </div>
-    </div>
+    <div id="u233"><!-- simple frame --></div>
    </div>
    <a class="nonblock nontext grpelem" id="u345" href="caricatures.html"><!-- state-based BG images --><div id="u345_states"><img alt="Caricatures" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    <a class="nonblock nontext grpelem" id="u348" href="comic.html"><!-- state-based BG images --><div id="u348_states"><img alt="Comic" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
@@ -49,6 +43,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <a class="nonblock nontext grpelem" id="u359" href="contact.html"><!-- state-based BG images --><div id="u359_states"><img alt="Contact" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    <a class="nonblock nontext MuseLinkActive grpelem" id="u362" href="index.html"><!-- state-based BG images --><div id="u362_states"><img alt="Home" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    <a class="nonblock nontext grpelem" id="u397" href="mailto:jahommas@gmail.com"><!-- state-based BG images --><div id="u397_states"><img alt="jahommas@gmail.com" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+   <div class="clip_frame grpelem" id="u412"><!-- image -->
+    <img class="block" id="u412_img" src="images/pic1.jpg?crc=4211681191" alt="" data-heightwidthratio="1" data-image-width="466" data-image-height="466"/>
+   </div>
    <div class="clip_frame grpelem" id="u324"><!-- svg -->
     <img class="svg svg_mar" id="u322" src="images/pasted-svg-76456x115.svg?crc=3901539588" onload="this.style.height=(this.offsetWidth*141/64.89204545454551)+'px'" alt="" data-mu-svgfallback="images/pasted%20svg%2076456x115_poster_.png?crc=214503417" data-heightwidthratio="2.169230769230769" data-image-width="65" data-image-height="141"/>
    </div>
