--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>jasonhommas</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=8871900"/>
-  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=3894807761" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3909434520"/>
+  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=60957252" id="pagesheet"/>
    </head>
  <body>
 
@@ -34,10 +34,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div id="u162"><!-- simple frame --></div>
    </div>
    <div class="browser_width grpelem" id="u233-bw">
-    <div id="u233"><!-- column -->
+    <div id="u233"><!-- group -->
      <div class="clearfix" id="u233_align_to_page">
-      <img class="colelem" id="u547-9" alt="I am a freelance illustrator and writer. In my work, I try to find truth and humor to improve people’s lives. I specialize in comics but have also done short films, song lyrics, short stories, painting, and more. " width="415" height="308" src="images/u547-9.png?crc=373814918"/><!-- rasterized frame -->
-      <img class="colelem" id="u562-4" alt="Email me at" src="images/u562-4.png?crc=338855707" data-image-width="353"/><!-- rasterized frame -->
+      <img class="grpelem" id="u562-4" alt="Email me at" src="images/u562-4.png?crc=338855707" data-image-width="353"/><!-- rasterized frame -->
      </div>
     </div>
    </div>
@@ -48,6 +47,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <a class="nonblock nontext MuseLinkActive grpelem" id="u359" href="contact.html"><!-- state-based BG images --><div id="u359_states"><img alt="Contact" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    <a class="nonblock nontext grpelem" id="u362" href="index.html"><!-- state-based BG images --><div id="u362_states"><img alt="Home" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    <a class="nonblock nontext grpelem" id="u397" href="mailto:jahommas@gmail.com"><!-- state-based BG images --><div id="u397_states"><img alt="jahommas@gmail.com" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
+   <img class="grpelem" id="u547-9" alt="I am a freelance illustrator and writer. In my work, I try to find truth and humor to improve people’s lives. I specialize in comics but have also done short films, song lyrics, short stories, painting, and more. " width="415" height="308" src="images/u547-9.png?crc=373814918"/><!-- rasterized frame -->
    <a class="nonblock nontext grpelem" id="u556" href="mailto:jahommas@gmail.com"><!-- state-based BG images --><div id="u556_states"><img alt="jahommas@gmail.com " src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    <div class="clip_frame grpelem" id="u324"><!-- svg -->
     <img class="svg svg_mar" id="u322" src="images/pasted-svg-76456x115.svg?crc=3901539588" onload="this.style.height=(this.offsetWidth*141/64.89204545454551)+'px'" alt="" data-mu-svgfallback="images/pasted%20svg%2076456x115_poster_.png?crc=214503417" data-heightwidthratio="2.169230769230769" data-image-width="65" data-image-height="141"/>
