I put all the text back into its intended positions after Aron told me the reason none of my changes were showing was because I had to refresh the page.

--- a/vehicles.html
+++ b/vehicles.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>jasonhommas</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3909434520"/>
-  <link rel="stylesheet" type="text/css" href="css/vehicles.css?crc=17197993" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=8871900"/>
+  <link rel="stylesheet" type="text/css" href="css/vehicles.css?crc=5357262" id="pagesheet"/>
    </head>
  <body>
 
@@ -37,8 +37,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div id="u233"><!-- group -->
      <div class="clearfix" id="u233_align_to_page">
       <img class="grpelem" id="u521-7" alt="I love drawing different kinds of vehicles. The helicopters were made for the Robinson Helicopter Company. " src="images/u521-7.png?crc=219731347" data-image-width="318"/><!-- rasterized frame -->
-      <div class="clip_frame grpelem" id="u491"><!-- image -->
-       <img class="block" id="u491_img" src="images/heli3.png?crc=199256571" alt="" data-heightwidthratio="1.0127118644067796" data-image-width="236" data-image-height="239"/>
+      <div class="clearfix grpelem" id="pu501"><!-- column -->
+       <div class="clip_frame colelem" id="u501"><!-- image -->
+        <img class="block" id="u501_img" src="images/heli1.png?crc=3844090646" alt="" data-heightwidthratio="0.6996336996336996" data-image-width="273" data-image-height="191"/>
+       </div>
+       <div class="clip_frame colelem" id="u491"><!-- image -->
+        <img class="block" id="u491_img" src="images/heli3.png?crc=199256571" alt="" data-heightwidthratio="1.0127118644067796" data-image-width="236" data-image-height="239"/>
+       </div>
+      </div>
+      <div class="clip_frame grpelem" id="u511"><!-- image -->
+       <img class="block" id="u511_img" src="images/pic5.jpg?crc=4248574233" alt="" data-heightwidthratio="1" data-image-width="410" data-image-height="410"/>
       </div>
      </div>
     </div>
@@ -50,12 +58,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <a class="nonblock nontext grpelem" id="u359" href="contact.html"><!-- state-based BG images --><div id="u359_states"><img alt="Contact" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    <a class="nonblock nontext grpelem" id="u362" href="index.html"><!-- state-based BG images --><div id="u362_states"><img alt="Home" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    <a class="nonblock nontext grpelem" id="u397" href="mailto:jahommas@gmail.com"><!-- state-based BG images --><div id="u397_states"><img alt="jahommas@gmail.com" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
-   <div class="clip_frame grpelem" id="u501"><!-- image -->
-    <img class="block" id="u501_img" src="images/heli1.png?crc=3844090646" alt="" data-heightwidthratio="0.6996336996336996" data-image-width="273" data-image-height="191"/>
-   </div>
-   <div class="clip_frame grpelem" id="u511"><!-- image -->
-    <img class="block" id="u511_img" src="images/pic5.jpg?crc=4248574233" alt="" data-heightwidthratio="1" data-image-width="410" data-image-height="410"/>
-   </div>
    <div class="clip_frame grpelem" id="u324"><!-- svg -->
     <img class="svg svg_mar" id="u322" src="images/pasted-svg-76456x115.svg?crc=3901539588" onload="this.style.height=(this.offsetWidth*141/64.89204545454551)+'px'" alt="" data-mu-svgfallback="images/pasted%20svg%2076456x115_poster_.png?crc=214503417" data-heightwidthratio="2.169230769230769" data-image-width="65" data-image-height="141"/>
    </div>
