--- a/caricatures.html
+++ b/caricatures.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>jasonhommas</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3909434520"/>
-  <link rel="stylesheet" type="text/css" href="css/caricatures.css?crc=238705126" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=8871900"/>
+  <link rel="stylesheet" type="text/css" href="css/caricatures.css?crc=258155491" id="pagesheet"/>
    </head>
  <body>
 
@@ -39,9 +39,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clip_frame grpelem" id="u422"><!-- image -->
        <img class="block" id="u422_img" src="images/pic3.jpg?crc=93274597" alt="" data-heightwidthratio="1" data-image-width="404" data-image-height="404"/>
       </div>
-      <div class="clip_frame grpelem" id="u442"><!-- image -->
-       <img class="block" id="u442_img" src="images/obrother-crop-u442.jpg?crc=4160341349" alt="" data-heightwidthratio="0.6948529411764706" data-image-width="272" data-image-height="189"/>
+      <div class="clearfix grpelem" id="pu432"><!-- column -->
+       <div class="clip_frame colelem" id="u432"><!-- image -->
+        <img class="block" id="u432_img" src="images/bride-crop-u432.jpg?crc=271594777" alt="" data-heightwidthratio="0.8814102564102564" data-image-width="312" data-image-height="275"/>
+       </div>
+       <div class="clip_frame colelem" id="u442"><!-- image -->
+        <img class="block" id="u442_img" src="images/obrother-crop-u442.jpg?crc=4160341349" alt="" data-heightwidthratio="0.6948529411764706" data-image-width="272" data-image-height="189"/>
+       </div>
       </div>
+      <img class="grpelem" id="u455-4" alt="I do a lot of caricatures because I love the expressiveness of faces. Here we have characters from the movies A Shot in the Dark, The Princess Bride, and O Brother, Where Art Thou?" src="images/u455-4.png?crc=3771008155" data-image-width="315"/><!-- rasterized frame -->
      </div>
     </div>
    </div>
@@ -52,10 +58,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <a class="nonblock nontext grpelem" id="u359" href="contact.html"><!-- state-based BG images --><div id="u359_states"><img alt="Contact" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    <a class="nonblock nontext grpelem" id="u362" href="index.html"><!-- state-based BG images --><div id="u362_states"><img alt="Home" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
    <a class="nonblock nontext grpelem" id="u397" href="mailto:jahommas@gmail.com"><!-- state-based BG images --><div id="u397_states"><img alt="jahommas@gmail.com" src="images/blank.gif?crc=4208392903"/><div class="fluid_height_spacer"></div></div></a>
-   <div class="clip_frame grpelem" id="u432"><!-- image -->
-    <img class="block" id="u432_img" src="images/bride-crop-u432.jpg?crc=271594777" alt="" data-heightwidthratio="0.8814102564102564" data-image-width="312" data-image-height="275"/>
-   </div>
-   <img class="grpelem" id="u455-4" alt="I do a lot of caricatures because I love the expressiveness of faces. Here we have characters from the movies A Shot in the Dark, The Princess Bride, and O Brother, Where Art Thou?" src="images/u455-4.png?crc=3771008155" data-image-width="315"/><!-- rasterized frame -->
    <div class="clip_frame grpelem" id="u324"><!-- svg -->
     <img class="svg svg_mar" id="u322" src="images/pasted-svg-76456x115.svg?crc=3901539588" onload="this.style.height=(this.offsetWidth*141/64.89204545454551)+'px'" alt="" data-mu-svgfallback="images/pasted%20svg%2076456x115_poster_.png?crc=214503417" data-heightwidthratio="2.169230769230769" data-image-width="65" data-image-height="141"/>
    </div>
