Readjusted contrast, brightness, etc of all the hand-drawn photos.

--- a/caricatures.html
+++ b/caricatures.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=8871900"/>
-  <link rel="stylesheet" type="text/css" href="css/caricatures.css?crc=258155491" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/caricatures.css?crc=3767497138" id="pagesheet"/>
    </head>
  <body>
 
@@ -36,15 +36,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="browser_width grpelem" id="u233-bw">
     <div id="u233"><!-- group -->
      <div class="clearfix" id="u233_align_to_page">
-      <div class="clip_frame grpelem" id="u422"><!-- image -->
-       <img class="block" id="u422_img" src="images/pic3.jpg?crc=93274597" alt="" data-heightwidthratio="1" data-image-width="404" data-image-height="404"/>
+      <div class="clip_frame grpelem" id="u601"><!-- image -->
+       <img class="block" id="u601_img" src="images/pic3new.jpg?crc=4162840784" alt="" data-heightwidthratio="1" data-image-width="367" data-image-height="367"/>
       </div>
-      <div class="clearfix grpelem" id="pu432"><!-- column -->
-       <div class="clip_frame colelem" id="u432"><!-- image -->
-        <img class="block" id="u432_img" src="images/bride-crop-u432.jpg?crc=271594777" alt="" data-heightwidthratio="0.8814102564102564" data-image-width="312" data-image-height="275"/>
+      <div class="clearfix grpelem" id="pu621"><!-- column -->
+       <div class="clip_frame colelem" id="u621"><!-- image -->
+        <img class="block" id="u621_img" src="images/bride-crop-u432new.jpg?crc=4272041243" alt="" data-heightwidthratio="0.8798701298701299" data-image-width="308" data-image-height="271"/>
        </div>
-       <div class="clip_frame colelem" id="u442"><!-- image -->
-        <img class="block" id="u442_img" src="images/obrother-crop-u442.jpg?crc=4160341349" alt="" data-heightwidthratio="0.6948529411764706" data-image-width="272" data-image-height="189"/>
+       <div class="clip_frame colelem" id="u611"><!-- image -->
+        <img class="block" id="u611_img" src="images/img_4747new-crop-u611.jpg?crc=4237156218" alt="" data-heightwidthratio="0.6974169741697417" data-image-width="271" data-image-height="189"/>
        </div>
       </div>
       <img class="grpelem" id="u455-4" alt="I do a lot of caricatures because I love the expressiveness of faces. Here we have characters from the movies A Shot in the Dark, The Princess Bride, and O Brother, Where Art Thou?" src="images/u455-4.png?crc=3771008155" data-image-width="315"/><!-- rasterized frame -->
@@ -61,7 +61,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clip_frame grpelem" id="u324"><!-- svg -->
     <img class="svg svg_mar" id="u322" src="images/pasted-svg-76456x115.svg?crc=3901539588" onload="this.style.height=(this.offsetWidth*141/64.89204545454551)+'px'" alt="" data-mu-svgfallback="images/pasted%20svg%2076456x115_poster_.png?crc=214503417" data-heightwidthratio="2.169230769230769" data-image-width="65" data-image-height="141"/>
    </div>
-   <div class="verticalspacer" data-offset-top="633" data-content-above-spacer="766" data-content-below-spacer="134" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="634" data-content-above-spacer="766" data-content-below-spacer="133" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/u345_states-r.png?crc=501020594" alt=""/>
