--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=8871900"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4112855396" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3830881961" id="pagesheet"/>
    </head>
  <body>
 
@@ -36,8 +36,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="browser_width grpelem" id="u233-bw">
     <div id="u233"><!-- group -->
      <div class="clearfix" id="u233_align_to_page">
-      <div class="clip_frame grpelem" id="u412"><!-- image -->
-       <img class="block" id="u412_img" src="images/pic1.jpg?crc=4211681191" alt="" data-heightwidthratio="1" data-image-width="466" data-image-height="466"/>
+      <div class="clip_frame grpelem" id="u591"><!-- image -->
+       <img class="block" id="u591_img" src="images/img_5588newest.jpg?crc=4000468688" alt="" data-heightwidthratio="1" data-image-width="466" data-image-height="466"/>
       </div>
      </div>
     </div>
