--- a/vehicles.html
+++ b/vehicles.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=8871900"/>
-  <link rel="stylesheet" type="text/css" href="css/vehicles.css?crc=5357262" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/vehicles.css?crc=4100862681" id="pagesheet"/>
    </head>
  <body>
 
@@ -45,8 +45,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <img class="block" id="u491_img" src="images/heli3.png?crc=199256571" alt="" data-heightwidthratio="1.0127118644067796" data-image-width="236" data-image-height="239"/>
        </div>
       </div>
-      <div class="clip_frame grpelem" id="u511"><!-- image -->
-       <img class="block" id="u511_img" src="images/pic5.jpg?crc=4248574233" alt="" data-heightwidthratio="1" data-image-width="410" data-image-height="410"/>
+      <div class="clip_frame grpelem" id="u631"><!-- image -->
+       <img class="block" id="u631_img" src="images/untitled-1-crop-u631.jpg?crc=91076170" alt="" data-heightwidthratio="0.92152466367713" data-image-width="446" data-image-height="411"/>
       </div>
      </div>
     </div>
